--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@codemirror/lang-javascript": "^0.19.3",
+    "@uiw/react-codemirror": "^4.3.2",
     "dotenv": "^10.0.0"
   }
 }
