--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@codemirror/lang-javascript": "^0.19.3",
+    "@codemirror/lang-rust": "^0.19.1",
     "@uiw/react-codemirror": "^4.3.2",
     "dotenv": "^10.0.0"
   }
